// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Source {
  SELF_SIGNUP
  INVITATION
}

enum PostType {
  ARTICLE
  ANNOUNCEMENT
  EVENT
}

enum UserRole {
  ADMIN
  USER
}

model User {
  id                           String    @id @default(uuid())
  source                       Source    @default(SELF_SIGNUP)
  email                        String    @unique
  role                         UserRole  @default(USER)
  hashedPassword               String?
  firstName                    String?
  lastName                     String?
  onboarded                    Boolean   @default(false)
  emailConfirmationToken       String?   @unique
  emailConfirmationTokenSentAt DateTime?
  emailConfirmed               Boolean   @default(false)
  passResetToken               String?   @unique
  passResetTokenCreatedAt      DateTime?
  createdAt                    DateTime  @default(now())
  updatedAt                    DateTime  @updatedAt

  articles      Article[]
  announcements Announcement[]
  events        Event[]
}

enum ArticleStatus {
  SUBMITTED
  REJECTED
  ACCEPTED
}

model Article {
  id       String    @id @default(uuid())
  title    String
  content  String
  status   ArticleStatus @default(SUBMITTED)
  userId   String
  creator  User      @relation(fields: [userId], references: [id])
  comments Comment[] @relation("ArticleComments")
  createdAt DateTime @default(now())
}

model Announcement {
  id       String    @id @default(uuid())
  title    String
  content  String
  userId   String
  creator  User      @relation(fields: [userId], references: [id])
  comments Comment[] @relation("AnnouncementComments")
  createdAt DateTime @default(now())
}

model Event {
  id       String    @id @default(uuid())
  name     String
  date     DateTime
  content  String
  // capacity
  // who has signed up
  userId   String
  creator  User      @relation(fields: [userId], references: [id])
  comments Comment[] @relation("EventComments")
  createdAt DateTime @default(now())
}

model Comment {
  id      String @id @default(uuid())
  title   String
  content String
  userId  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  articleId String?
  article   Article? @relation("ArticleComments", fields: [articleId], references: [id])

  announcementId String?
  announcement   Announcement? @relation("AnnouncementComments", fields: [announcementId], references: [id])

  eventId String?
  event   Event?  @relation("EventComments", fields: [eventId], references: [id])
}
