
@startuml
enum Source {
  SELF_SIGNUP
  INVITATION
}

enum PostType {
  ARTICLE
  ANNOUNCEMENT
  EVENT
}

enum UserRole {
  ADMIN
  USER
}

enum ArticleStatus {
  SUBMITTED
  REJECTED
  ACCEPTED
}

' Define Classes
class User {
  -id: String {id, default(uuid())}
  -source: Source {default(SELF_SIGNUP)}
  -email: String {unique}
  -role: UserRole {default(USER)}
  -hashedPassword: String?
  -firstName: String?
  -lastName: String?
  -onboarded: Boolean {default(false)}
  -emailConfirmationToken: String? {unique}
  -emailConfirmationTokenSentAt: DateTime?
  -emailConfirmed: Boolean {default(false)}
  -passResetToken: String? {unique}
  -passResetTokenCreatedAt: DateTime?
  -createdAt: DateTime {default(now())}
  -updatedAt: DateTime
}

class Article {
  -id: String {id, default(uuid())}
  -title: String
  -content: String
  -status: ArticleStatus {default(SUBMITTED)}
  -userId: String
  -createdAt: DateTime {default(now())}
}

class Announcement {
  -id: String {id, default(uuid())}
  -title: String
  -content: String
  -userId: String
  -createdAt: DateTime {default(now())}
}

class Event {
  -id: String {id, default(uuid())}
  -name: String
  -date: DateTime
  -content: String
  -userId: String
  -createdAt: DateTime {default(now())}
}

class Comment {
  -id: String {id, default(uuid())}
  -title: String
  -content: String
  -userId: String
  -createdAt: DateTime {default(now())}
  -updatedAt: DateTime
  -articleId: String?
  -announcementId: String?
  -eventId: String?
}

' Define Relationships
User "1" -- "0..*" Article : creates
User "1" -- "0..*" Announcement : creates
User "1" -- "0..*" Event : creates
Article "1" -- "0..*" Comment : has
Announcement "1" -- "0..*" Comment : has
Event "1" -- "0..*" Comment : has
User "1" -- "0..*" Comment : posts

@enduml

